# serializer version: 1
# name: test_camera_entities_snapshot[platforms0-imou_mock_devices0][camera.device_1_live_view_hd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.device_1_live_view_hd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Live view HD',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live view HD',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'camera_hd',
    'unique_id': 'd1_1$camera_hd',
    'unit_of_measurement': None,
  })
# ---
# name: test_camera_entities_snapshot[platforms0-imou_mock_devices0][camera.device_1_live_view_hd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_hd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view HD',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_hd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_entities_snapshot[platforms0-imou_mock_devices0][camera.device_1_live_view_sd-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.device_1_live_view_sd',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Live view SD',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live view SD',
    'platform': 'imou',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'camera_sd',
    'unique_id': 'd1_1$camera_sd',
    'unit_of_measurement': None,
  })
# ---
# name: test_camera_entities_snapshot[platforms0-imou_mock_devices0][camera.device_1_live_view_sd-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_sd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view SD',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_sd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[both_detect_on-camera_hd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_hd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view HD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_hd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[both_detect_on-camera_sd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_sd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view SD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_sd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[header_detect_on-camera_hd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_hd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view HD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_hd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[header_detect_on-camera_sd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_sd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view SD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_sd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[motion_detect_on-camera_hd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_hd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view HD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_hd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[motion_detect_on-camera_sd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_sd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view SD',
      <CameraEntityStateAttribute.MOTION_DETECTION: 'motion_detection'>: True,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_sd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[no_detect_switches-camera_hd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_hd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view HD',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_hd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_state[no_detect_switches-camera_sd]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.device_1_live_view_sd?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1 Live view SD',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.device_1_live_view_sd',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
